finished part 1 (course crud)

--- a/views/course/profile.pug
+++ b/views/course/profile.pug
@@ -3,7 +3,9 @@ extends ../layout
 block content
     h3= course.name
     a(href=`/courses/edit/${course.id}`) Edit Course
+    a(href=`/courses/delete/${course.id}`) Delete Course
     div
         p Instructor: #{course.instructor_name}
         p Department: #{course.department}
         p= course.description
+        a(href='/courses') Back to Courses
