finished crud for students (part 2)

--- a/views/student/edit.pug
+++ b/views/student/edit.pug
@@ -2,4 +2,4 @@ extends ../layout
 
 block content
     include ../mixins/studentForm
-    +studentForm(student, `/students/edit/${student.id}`, `/students/profile/${student.id}`)
+    +studentForm(student, grade_levels, `/students/edit/${student.id}`, `/students/profile/${student.id}`)
