--- a/views/student/view_all.pug
+++ b/views/student/view_all.pug
@@ -8,7 +8,7 @@ block content
             tr
                 th First
                 th Last
-                th Grade
+                th Grade level
                 th
         tbody
             each student in students
