--- a/views/student/add.pug
+++ b/views/student/add.pug
@@ -2,4 +2,4 @@ extends ../layout
 
 block content
     include ../mixins/studentForm
-    +studentForm(student, `/students/add`, `/students`)
+    +studentForm(student, grade_levels, `/students/add`, `/students`)
