--- a/views/student/profile.pug
+++ b/views/student/profile.pug
@@ -1,10 +1,10 @@
 extends ../layout
 
 block content
-    h3= student.name
+
     a(href=`/students/edit/${student.id}`) Edit Student
     a(href=`/students/delete/${student.id}`) Delete Student
     div
+        h3 Name: #{student.first_name} #{student.last_name}
         p Grade: #{student.grade_level}
-        p= student.description
         a(href='/students') Back to Students
