--- a/views/course/profile.pug
+++ b/views/course/profile.pug
@@ -9,3 +9,20 @@ block content
         p Department: #{course.department}
         p= course.description
         a(href='/courses') Back to Courses
+    div.students
+        h4 Enrolled Students
+        table
+            thead
+                tr
+                    th First
+                    th Last
+                    th Grade level
+                    th
+            tbody
+                each student in course.students
+                    tr
+                        td= student.first_name
+                        td= student.last_name
+                        td= student.grade_level
+                        td
+                            a(href=`/students/profile/${student.id}`) View Student
