--- a/views/student/profile.pug
+++ b/views/student/profile.pug
@@ -1,10 +1,26 @@
 extends ../layout
 
 block content
-
     a(href=`/students/edit/${student.id}`) Edit Student
     a(href=`/students/delete/${student.id}`) Delete Student
     div
         h3 Name: #{student.first_name} #{student.last_name}
         p Grade: #{student.grade_level}
         a(href='/students') Back to Students
+    div.courses
+        h4 Student Courses
+        table
+            thead
+                tr
+                    th Course Title
+                    th Instructor
+                    th Department
+                    th
+            tbody
+                each course in student.courses
+                    tr
+                        td= course.name
+                        td= course.instructor_name
+                        td= course.department
+                        td
+                            a(href=`/courses/profile/${course.id}`) View Course
