--- a/views/course/profile.pug
+++ b/views/course/profile.pug
@@ -10,7 +10,12 @@ block content
         p= course.description
         a(href='/courses') Back to Courses
     div.students
-        h4 Enrolled Students
+        h4 Available Students
+        form(action=`/courses/${course.id}/enroll/` method='post')
+            select(name='student' id='student' autocomplete=off)
+                each student in availableStudents
+                    option(value=student.id) #{student.first_name}
+            button.button(type='submit') Enroll
         table
             thead
                 tr
@@ -26,3 +31,4 @@ block content
                         td= student.grade_level
                         td
                             a(href=`/students/profile/${student.id}`) View Student
+                            a(href=`/courses/${course.id}/removeStudent/${student.id}`) Remove Student
