--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,91 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background: #CBD5E1;
+  padding: 0;
+  margin: 0;
 }
 
 a {
-  color: #00B7FF;
+  display: inline-block;
+  color: #0284C7;
+  margin-right: 16px;
+  text-decoration: none;
 }
+
+nav {
+  width: 100%;
+  background: white;
+  margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav ul {
+  display: flex;
+  margin: 0;
+  list-style: none;
+  padding: 0;
+}
+
+.school-title {
+  font-size: 20px;
+  padding-left: 64px;
+}
+
+nav li a {
+  display: block;
+  padding: 20px 30px;
+  color: #075985;
+  font-size: 18px;
+}
+
+.nav-content {
+  max-width: 1300px;
+  width: 100%;
+}
+
+.container {
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.content-container {
+  background: white;
+  border-radius: 12px;
+  padding: 20px;
+}
+
+table {
+  width: 100%;
+}
+
+td, th {
+  padding: 8px 12px;
+  text-align: left;
+}
+
+.form-input {
+  margin-bottom: 8px;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+}
+
+.button {
+  border-radius: 12px;
+  padding: 4px 8px;
+  border: 1px solid grey;
+  color: black;
+  background: white;
+}
+
+.button.primary {
+  background-color: #075985;
+  color: white;
+  border-color: #075985;
+}
+
