--- a/views/mixins/studentForm.pug
+++ b/views/mixins/studentForm.pug
@@ -18,4 +18,4 @@ mixin studentForm(student, grade_levels, saveUrl, cancelUrl)
 
             div.form-buttons
                 a.button(href=cancelUrl) Cancel
-                button.button(type='submit') Save
+                button.button.primary(type='submit') Save
